--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Ted's Spotify App</title>
+    <title>BrightSign Autorun</title>
     <link rel="stylesheet" href="./css/app.css">
 </head>
 <body>
